# becoming-itumeleng

./: .env.example  LICENSE  README.md  agent.py  exceptions.py  main.py  models.py  pyproject.toml
data/: brand.yaml  goals.yaml  wardrobe.yaml
tools/: __init__.py  accountability.py  consistency_coach.py  hype_woman.py  style_curator.py
