[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "becoming-itumeleng"
version = "1.0.0"
description = "An AI powered personal growth agent. Part stylist, part life coach, part accountability partner."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Itumeleng Mokgako"},
]

dependencies = [
    "strands-agents>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]


